fix dedicate server loading